# mass-watermark-stamper

./: README.md  build.spec  environment.yml  pyproject.toml  stamp.py  stamp_cli  stamp_cli.py  stamp_gui  stamp_gui.py
